--- a/ui-challenge/index.html
+++ b/ui-challenge/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>COA - Taskforce Gallery</title>
   </head>
   <body>
     <div class="container">
