--- a/ui-challenge/index.html
+++ b/ui-challenge/index.html
@@ -37,7 +37,7 @@
       <div class="card">
         <img src="./image/image 3.jpg" alt="Image 3" />
         <div class="info">
-          <h1>COMMON,BROWN BABOON</h1>
+          <h1>COMMON BROWN BABOON</h1>
           <p>India</p>
           <a href="single.html">
             <span>Know more</span>
